Archive2/c9/d11651f7066512/output
main.cpp:12:5: error: call to 'test' is ambiguous
    test(make_pair(1, "1"));
    ^~~~
main.cpp:6:6: note: candidate function
void test(const pair<const int, string> &){} // #1
     ^
main.cpp:7:6: note: candidate function
void test(const pair<int, string> &){} // #2
     ^
1 error generated.
